# 100pa3

./: 1_comp.txt  4_comp.txt  bash_ard.txt  bash_comp.txt  bible_comp.txt  bibleard.txt  check0_comp.txt  check0ard.txt  check1_comp.txt  check1_decomp.txt  check1ard.txt  check2_comp.txt  check2ard.txt  check3_comp.txt  check3ard.txt  check5_comp.txt  check5_decomp.txt  check5ard.txt  check6_comp.txt  check6_decomp.txt  check6ard.txt  harry_comp.txt  harry_decomp.txt  lcet10_comp.txt  lcet10ard.txt  meson.build  warandpeace_comp.txt  warandpeace_decomp.txt
data/: check4.txt
src/: compress.cpp  meson.build  uncompress.cpp
src/bitStream/input/: BitInputStream.cpp  BitInputStream.hpp  meson.build
src/bitStream/output/: BitOutputStream.cpp  BitOutputStream.hpp  meson.build
src/encoder/: HCNode.hpp  HCTree.cpp  HCTree.hpp  meson.build
test/: meson.build  test_BitInputStream.cpp  test_BitOutputStream.cpp  test_HCTree.cpp
